# cli_clipboard_manager

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
